# pybind11_cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure  requirements.txt  test_add.py  test_mul.py
.github/workflows/: amain.yml
3rd/: CMakeLists.txt
inc/: adder.hpp  example.h
src/: CMakeLists.txt  adder.cpp  adder.cu  call_cpp.cpp  call_cuda.cu  call_python.cpp  example.cpp  example.cu
src/python/: call_calc.py  setup.py
